SymbolicExecution_v1.1 (получилось извлекать dex файлы из apk)